<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_episodes">

    <fragment
        android:id="@+id/navigation_episodes"
        android:name="com.example.android_ca.feature.episodes.presentation.EpisodeFragment"
        android:label="@string/title_episode"
        tools:layout="@layout/fragment_episode" />

    <fragment
        android:id="@+id/navigation_locations"
        android:name="com.example.android_ca.feature.locations.presentation.LocationFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_characters"
        android:name="com.example.android_ca.feature.characters.presentation.CharacterFragment"
        android:label="@string/title_characters"
        tools:layout="@layout/fragment_character" />
</navigation>