<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="5sp"
    android:theme="@style/Theme.AndroidCA">

    <TextView
        android:id="@+id/episode_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/episode_code"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/episode_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/episode_name" />

    <TextView
        android:id="@+id/episode_air_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/episode_air_date" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/ic_launcher_background" />
</LinearLayout>