<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="5sp"
    android:theme="@style/Theme.AndroidCA">

    <TextView
        android:id="@+id/location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/location_name" />

    <TextView
        android:id="@+id/location_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/location_type" />

    <TextView
        android:id="@+id/location_dimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/location_dimension" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/ic_launcher_background" />
</LinearLayout>